--- a/app.json
+++ b/app.json
@@ -6,7 +6,10 @@
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "plugins": [
+      "expo-router",
+      "expo-location"
+    ],
     "splash": {
       "image": "./src/assets/splash-icon.png",
       "resizeMode": "contain",
@@ -25,9 +28,6 @@
       "favicon": "./src/assets/favicon.png"
     },
     "scheme": "postfrontend",
-    "plugins": [
-      "expo-router"
-    ],
     "experiments": {
       "typedRoutes": true
     }
